--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>ello! My name is Drew, and print("I &lt3 python")</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Dallas, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love playing guitar, video games, coding, and cooking!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to be a front-end developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Dallas, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love being creative and solving problems!</p>
     </section>
 
     <footer id="footer">
